--- a/hw0_Tianyi_Zhang.ipynb
+++ b/hw0_Tianyi_Zhang.ipynb
@@ -496,6 +496,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git init"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
